# CalVerT

./: .gitignore  README.md  pyproject.toml
grpo/: README.md  build_sft_corpus.py  build_train_data.py  reward.py  reward_canary.py  role_beam_agent_loop.py  sft_train.py  tinker_train.py
grpo/config/: reward_config.yaml
scripts/: build_hotpotqa_index.sh  build_witqa_index.sh  download_hotpotqa.sh  download_triviaqa.sh  download_witqa.sh  run_hotpotqa_role_beam.sh  run_triviaqa_closed_book.sh  run_witqa_role_beam.sh
src/telemetry_agent/: __init__.py  _common.py  prompts.py  schema.py  scorers.py
src/telemetry_agent/dinco/: _calibration.py  _controls.py  _gpt_oss_triviaqa.py  _hotpot_eval.py  beam_search.py  chat_prompt.py  core.py  triviaqa.py
src/telemetry_agent/planner/: qwen_planner.py
src/telemetry_agent/retrieval/: bm25_index.py  build_index.py
src/telemetry_agent/runners/: _base_runner.py  _core.py  _hotpot_evidence.py  _hotpot_utils.py  _origbeam.py  _witqa_utils.py  hotpotqa_role_beam.py  triviaqa_closed_book.py  witqa_role_beam.py
tests/: test_bm25_index.py  test_schema.py  test_scorers.py
