[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telemetry-agent"
version = "0.1.0"
description = "Calibrated verifier telemetry for action-efficient LLM agents (EMNLP paper companion code)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Ashwin Nair" }]
keywords = ["llm", "agents", "retrieval", "calibration", "grpo", "verifier"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "vllm>=0.6",
    "transformers>=4.45",
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "rank-bm25>=0.2",
    "scikit-learn>=1.3",
    "jsonschema>=4.20",
    "torch>=2.4",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
grpo = [
    "tinker>=0.1",
    "trl>=0.11",
    "peft>=0.12",
    "wandb>=0.17",
    "accelerate>=0.34",
]
test = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/ashwinn-v/CalVerT"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
